--- a/ex/places.css
+++ b/ex/places.css
@@ -3,6 +3,8 @@ body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
 }
+
+/* Navigation Bar */
 nav {
     background-color: #0a0a0a;
     display: flex;
@@ -59,6 +61,8 @@ nav ul li a {
     align-items: center;
     padding: 10px 50px;
 }
+
+/* Slider */
 .slider {
     position: relative;
     overflow: hidden;
@@ -92,6 +96,8 @@ nav ul li a {
     border-radius: 5px;
     max-width: 400px;
 }
+
+/* Navigation Buttons */
 .prev, .next {
     position: absolute;
     top: 50%;
@@ -110,31 +116,24 @@ nav ul li a {
 .prev:hover, .next:hover {
     background-color: rgba(0,0,0,0.8);
 }
+
 .historical-footer {
     position: relative;
-    background-color: #e9c1a6;
+    background-color: #a89393;
     color: black;
     text-align: center;
-    padding-top: 50px;
+    padding-top: 73px;
     font-family: 'Poppins', sans-serif;
-}
-
-.footer-silhouette {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 150px;
 }
 
 .footer-content {
     position: relative;
     z-index: 2;
-    padding: 2px;
+    padding: 30px;
 }
 
 .footer-social {
-    margin-bottom: 2px;
+    margin-bottom: 10px;
 }
 
 .footer-social a {
@@ -149,8 +148,6 @@ nav ul li a {
 }
 
 .footer-content p {
-    margin: 1px 0;
+    margin: 5px 0;
     font-size: 14px;
 }
-
-
