--- a/ex/style.css
+++ b/ex/style.css
@@ -1,4 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Cinzel:wght@700&family=Merriweather:wght@400;700&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 body {
     margin: 0;
@@ -66,6 +70,7 @@ nav ul li a {
     padding: 0;
 }
 
+
   .banner img {
       width: 1500px;
       height: 800px;
@@ -110,7 +115,7 @@ nav ul li a {
 }
 
 .card {
-    background: #fdd4b8ea;
+    background: #eec4a9;
     padding: 10px;
     border-radius: 8px;
     transition: transform 0.3s ease;
@@ -232,7 +237,7 @@ nav ul li a {
 }
 
 .card {
-    background: #ffecd0;
+    background: #ffcece;
     border-radius: 10px;
     padding: 15px;
     box-shadow: 0 2px 8px rgba(0,0,0,0.1);
@@ -247,10 +252,10 @@ nav ul li a {
 }
 .historical-footer {
     position: relative;
-    background-color: #e9c1a6;
+    background-color: #d8b1b1;
     color: black;
     text-align: center;
-    padding-top: 50px;
+    padding-top: 80px;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -265,11 +270,11 @@ nav ul li a {
 .footer-content {
     position: relative;
     z-index: 2;
-    padding: 2px;
+    padding: 20px;
 }
 
 .footer-social {
-    margin-bottom: 2px;
+    margin-bottom: 10px;
 }
 
 .footer-social a {
@@ -284,7 +289,7 @@ nav ul li a {
 }
 
 .footer-content p {
-    margin: 1px 0;
+    margin: 5px 0;
     font-size: 14px;
 }
 
